# filter

./: .gitmodules  .travis.yml  CMakeLists.txt  ReadMe-Public.md  ReadMe.md  package-info.json.in
docs/: filter.bessel.maxref.xml  filter.bessel~.maxref.xml  filter.butterworth.maxref.xml  filter.butterworth~.maxref.xml  filter.chebyshev1.maxref.xml  filter.chebyshev1~.maxref.xml  filter.chebyshev2.maxref.xml  filter.chebyshev2~.maxref.xml  filter.dcblock~.maxref.xml  filter.elliptic.maxref.xml  filter.elliptic~.maxref.xml  filter.jit.bessel.maxref.xml  filter.jit.butterworth.maxref.xml  filter.jit.chebyshev1.maxref.xml  filter.jit.chebyshev2.maxref.xml  filter.jit.elliptic.maxref.xml  filter.jit.legendre.maxref.xml  filter.legendre.maxref.xml  filter.legendre~.maxref.xml  filter.one~.maxref.xml  jit.filter.bessel.maxref.xml  jit.filter.butterworth.maxref.xml  jit.filter.chebyshev1.maxref.xml  jit.filter.chebyshev2.maxref.xml  jit.filter.elliptic.maxref.xml  jit.filter.legendre.maxref.xml
extras/: Filter Overview.maxpat
help/: filter.bessel.maxhelp  filter.bessel~.maxhelp  filter.butterworth.maxhelp  filter.butterworth~.maxhelp  filter.chebyshev1.maxhelp  filter.chebyshev1~.maxhelp  filter.chebyshev2.maxhelp  filter.chebyshev2~.maxhelp  filter.dcblock~.maxhelp  filter.elliptic.maxhelp  filter.elliptic~.maxhelp  filter.hello-world.maxhelp  filter.jit.bessel.maxhelp  filter.jit.butterworth.maxhelp  filter.jit.chebyshev1.maxhelp  filter.jit.chebyshev2.maxhelp  filter.jit.elliptic.maxhelp  filter.jit.legendre.maxhelp  (+3 more)
source/projects/jit.filter.legendre/: CMakeLists.txt
(+43 files in other folders)
